# str-ngs-simulator

./: LICENSE.md  README.md  input_checker.sh  meta.yaml  pyproject.toml  simTool.py
.github/workflows/: tests.yml
example_files/: ref_HTT.bed
example_files/test_set_out/: combined1.fq  combined2.fq
example_files/test_set_out/fasta/: output-1.fa  output0.fa  output1.fa
example_files/test_set_out/fastq/output-1_dir/: output-1.sam  output-11.aln  output-11.fq  output-12.aln  output-12.fq
example_files/test_set_out/fastq/output0_dir/: output0.sam  output01.aln  output01.fq  output02.aln  output02.fq
example_files/test_set_out/fastq/output1_dir/: output1.sam  output11.aln  output11.fq  output12.aln  output12.fq
recipe/: meta.yaml
scripts_old/: Supp_figs.ipynb
simulationTool/: __main__.py
stuttersim/: __main__.py
tests/: input_checker.sh
