[tool.poetry]
name = "stuttersim"
version = "0.1.0"
description = ""
authors = ["Andrew Shen"]
license = "MIT"
packages = [
    { include = "stuttersim" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
stuttersim = 'stuttersim.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
